[package]
name = "bb-age-attestation"
version = "0.1.0"
edition = "2021"
description = "BigBother Age Attestation Service - OS-level age bracket signaling via D-Bus"
authors = ["Hausken"]

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
age = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
derive_more = { version = "2", features = ["display"] }
