[package]
name = "bb-installer"
version = "0.1.0"
edition = "2021"
description = "BigBother NixOS Installer - Your Friendly Surveillance-Themed Setup Wizard"
authors = ["Ministry of Installation"]

[dependencies]
eframe = { version = "0.27", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui_extras = { version = "0.27", default-features = false }
sysinfo = "0.32"
chrono = "0.4"
chrono-tz = "0.10"
libc = "0.2"
rand = "0.8"

# Pin problematic dependencies to versions compatible with stable Rust
smithay-clipboard = "=0.7.2"
home = "=0.5.9"

[profile.release]
opt-level = "z"
lto = true
strip = true
